--- a/JS/task3/Sass/task.scss
+++ b/JS/task3/Sass/task.scss
@@ -9,6 +9,7 @@ $background: #ffedc5;
 body {
     margin: 0;
     background:$background-color;
+    padding-bottom: 24%;
 }
 .hot {
     padding: 10px;
@@ -106,107 +107,109 @@ color: $color-f;
 .block-1:hover .combination {
     display: block;
 }
-.box {
 
-    .day {
-        width: 98%;
-        margin: 5px auto;
-        background-color: $color-f;
-        border: 1px solid #c9c9c9;
-        text-align: center;
-        line-height: 50px;
-        font-size: 20px;
-        color: $background-color;
+.day {
+    width: 98%;
+    margin: 5px auto;
+    background-color: $color-f;
+    border: 1px solid #c9c9c9;
+    text-align: center;
+    line-height: 50px;
+    font-size: 20px;
+    color: $background-color;
+    display: block;
+    cursor: pointer;
+    
+}
+.options {
+     width: 98%;
+     margin: 0 auto;
+     padding-bottom: 30px;
+     background: $color-f;
+     border: 1px solid #cac9c9;
+     position: relative;
+     cursor: pointer;
+ 
+     .triangle-top {                                       
+        border: 17px solid;
+        border-color: transparent transparent $color-f;
+        position: absolute;
+        left: calc(50% - 17px);
+        top: -30px;
         cursor: pointer;
-        
     }
-    .options {
-         width: 98%;
-         margin: 0 auto;
-         padding-bottom: 30px;
-         background: $color-f;
-         border: 1px solid #cac9c9;
-         position: relative;
-         cursor: pointer;
-         .triangle-top {                                       
-            border: 17px solid;
-            border-color: transparent transparent $color-f;
-            position: absolute;
-            left: calc(50% - 17px);
-            top: -30px;
+        .discuss {
+            margin-top: 30px;
+            display: flex;
+            justify-content: center;
+            font-size: 20px;
+            color: $color-f;
+            position: relative;
             cursor: pointer;
-        }
-            .discuss {
-                margin-top: 30px;
-                display: flex;
-                justify-content: center;
-                font-size: 20px;
-                color: $color-f;
+          
+
+            
+            .sun {
                 position: relative;
                 cursor: pointer;
 
-                
-                .sun {
-                    position: relative;
-                    cursor: pointer;
-
-                    img{
-                        width: 40px;
-                        padding-right: 24px;
-                    }
-                    .kkk {
-                        height: 45px;
-                        position: absolute;
-                        top: -36px;
-                        left: 19px;
-                        border-right: 1px solid #999;
-                    }
+                img{
+                    width: 40px;
+                    padding-right: 24px;
                 }
-                
-               
+                .kkk {
+                    height: 45px;
+                    position: absolute;
+                    top: -36px;
+                    left: 19px;
+                    border-right: 1px solid #999;
+                }
+            }
+            
+           
 
-                
-                .block-s {
-                    width: 70%;
-                    height: 40px;
-                    background: #24a7c6;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    position: relative;
-                    .triangle-left {                                       
-                        border-top: 20px solid transparent;
-                        border-bottom: 20px solid transparent;
-                        border-right: 40px solid #24a7c6;
-                        position: absolute;
-                        left: -19px;
-                    }
-                 }
-            }     
-    }
+            
+            .block-s {
+                width: 70%;
+                height: 40px;
+                background: #24a7c6;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                position: relative;
+                .triangle-left {                                       
+                    border-top: 20px solid transparent;
+                    border-bottom: 20px solid transparent;
+                    border-right: 40px solid #24a7c6;
+                    position: absolute;
+                    left: -19px;
+                }
+             }
+        }     
 }
-
-
-
 
 .result {
-    width: 62%;
-    height: 20px;
-    position: absolute;
-    margin-left: 30px;
-    top: 100%;
-    outline: none;
-    border: none;
-    text-align: center;
+width: 62%;
+height: 20px;
+position: absolute;
+margin-left: 30px;
+top: 100%;
+outline: none;
+border: none;
+text-align: center;
 }
 .num-day {
-    width: 70px;
-    height: 27px;
-    outline: none;
-    border: none;
-    text-align: center;
-}
+width: 70px;
+height: 27px;
+outline: none;
+border: none;
+text-align: center;
+} 
 
+ul {
+list-style: none;
+margin-left: -40px;
+}
 
 
 .footer {
