--- a/JS/task3/Sass/task-3-1.css
+++ b/JS/task3/Sass/task-3-1.css
@@ -50,11 +50,13 @@ body {
 .status > .number input {
   width: 78%;
   height: 65%;
+  margin-left: -3px;
   font-size: 34px;
   text-align: center;
   border: none;
   outline: none;
   color: #f56b81;
+  border-radius: 100%;
 }
 
 .status > .number input::-webkit-input-placeholder {
