--- a/JS/task3/Sass/task-3-1.scss
+++ b/JS/task3/Sass/task-3-1.scss
@@ -39,7 +39,7 @@ body {
     padding-bottom: 30%;
     margin-top: 90px;
 
-    >.number {
+    .number {
         width: 50px;
         height: 50px;
         position: absolute;
@@ -52,20 +52,8 @@ body {
         justify-content: center;
         align-items: center;
         z-index: 999;
-        input {
-            width: 78%;
-            height: 65%;
-            margin-left: -3px;
-            font-size: 34px;
-            text-align: center;
-            border: none;
-            outline: none;
-            color: #f56b81;
-            border-radius: 100%;
-        }
-        input::-webkit-input-placeholder{
-            color: #f56b81;
-            }
+        font-size: 20px;
+        color: #f56b81;
     }
 
 
