--- a/JS/task3/Sass/task-4-1.scss
+++ b/JS/task3/Sass/task-4-1.scss
@@ -118,10 +118,14 @@ $color-1: #a6a6a6;
       font-size: 26px;
       outline: none;
       margin: 0 10px;
-      -webkit-appearance:none;
   }
   >.button-1 {
       background: #f66f6f;
   }
   
+  
 }
+input[type="button"], input[type="submit"], input[type="reset"] {
+    -webkit-appearance: none;
+    }
+    textarea { -webkit-appearance: none;}
