--- a/JS/task3/Sass/task-3-1.scss
+++ b/JS/task3/Sass/task-3-1.scss
@@ -59,7 +59,7 @@ body {
 
 
         >.content {
-            width: 72%;
+            width: 160px;
             height: 400px;
             margin: 0 auto;
             
