--- a/JS/task3/Sass/task-3-1.scss
+++ b/JS/task3/Sass/task-3-1.scss
@@ -58,7 +58,7 @@ body {
 
 
 
-        >.content {
+        .content {
             width: 72%;
             height: 400px;
             margin: 0 auto;
