--- a/JS/task3/Sass/task-3-1.scss
+++ b/JS/task3/Sass/task-3-1.scss
@@ -74,9 +74,7 @@ body {
             .photo {
                 display: flex;
                 justify-content: center;
-                img {
-                    width: 160px;  
-                }  
+                
                 }
         }
         >.button {
@@ -111,7 +109,9 @@ body {
 
 
 
-
+.logos {
+    width: 160px;  
+} 
 
 
 
