--- a/JS/task3/Sass/task.css
+++ b/JS/task3/Sass/task.css
@@ -112,6 +112,19 @@ body {
   cursor: pointer;
 }
 
+label {
+  width: 98%;
+  margin: 5px auto;
+  background-color: #fff;
+  border: 1px solid #c9c9c9;
+  text-align: center;
+  line-height: 50px;
+  font-size: 20px;
+  color: #29bde0;
+  display: block;
+  cursor: pointer;
+}
+
 .options {
   width: 98%;
   margin: 0 auto;
