--- a/JS/task3/Sass/task.scss
+++ b/JS/task3/Sass/task.scss
@@ -117,6 +117,26 @@ color: $color-f;
     cursor: pointer;
     
 }
+
+
+
+
+label {
+    width: 98%;
+    margin: 5px auto;
+    background-color: $color-f;
+    border: 1px solid #c9c9c9;
+    text-align: center;
+    line-height: 50px;
+    font-size: 20px;
+    color: $background-color;
+    display: block;
+    cursor: pointer;
+}
+
+
+
+ 
 .options {
      width: 98%;
      margin: 0 auto;
@@ -125,6 +145,7 @@ color: $color-f;
      border: 1px solid #cac9c9;
      position: relative;
      cursor: pointer;
+
  
      .triangle-top {                                       
         border: 17px solid;
@@ -233,5 +254,6 @@ margin-left: -40px;
     outline: none;
     cursor: pointer;
 }
+
 
 
